# hash-id

./: .travis.yml  LICENSE  README.md  hash-id.cabal
src/Data/: HashId.hs
src/Data/HashId/: Internal.hs
tests/: Tests.hs  hash-id-tests.cabal
tests/Tests/: Properties.hs  Simple.hs
