name:                hash-id
version:             0.1.0.0
synopsis:            A library for obfuscating integer IDs
description:         TODO
license:             MIT
license-file:        LICENSE
author:              Marcel Büsing, Samuel Schuhmacher
maintainer:          Marcel Büsing, Samuel Schuhmacher <code@muhbaasu.de>
homepage:            https://github.com/muhbaasu/hash-id
bug-reports:         https://github.com/muhbaasu/hash-id/issues
category:            Utility
build-type:          Simple
tested-with:         GHC == 7.10.1
stability:           experimental
cabal-version:       >=1.10
extra-source-files:  .travis.yml
                     .gitignore
                     LICENSE
                     README.md

source-repository head
  type: git
  location: git://github.com/muhbaasu/hash-id.git

library
  exposed-modules:     Data.HashId

  build-depends:       base >=4.8 && <4.9
                     , refined

  hs-source-dirs:      src
  default-language:    Haskell98
  ghc-options:         -Wall -fwarn-tabs -O2

test-suite tests
   type:               exitcode-stdio-1.0
   hs-source-dirs:     src
                     , tests
   main-is:            Tests.hs

   ghc-options:        -Wall -O0

   build-depends:      base >=4.8 && <4.9
                     , refined
                     , HUnit >=1.2
                     , QuickCheck >=2.4 && <2.8
                     , test-framework >=0.8
                     , test-framework-quickcheck2 >=0.3
                     , test-framework-hunit >=0.3
